<resources>
    <string name="app_name">UberVet-frontend</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="novo_usuario">Novo usuário</string>
    <string name="name">Nome</string>
    <string name="especializacao">Especialização</string>
    <string name="endereco">Endereco</string>
    <string name="confirmar_cadastro">Confirmar cadastro</string>
    <string name="cadastrar_novo_veterinario">Cadastrar novo veterinário</string>
    <string name="registro">Registro CRMV</string>
    <string name="id">Id</string>
    <string name="telefone">Telefone</string>
    <string name="nome">Nome:</string>
    <string name="especializa_o">Especialização:</string>
    <string name="endere_o">Endereço:</string>
    <string name="fone">Telefone:</string>
</resources>