<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_character"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="@color/purple_500"
            app:cardCornerRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/iv_url"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:src="@color/teal_200" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/cv_character"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_especializacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/especializacao"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toEndOf="@+id/cv_character"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_endereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_especializacao"
            app:layout_constraintStart_toEndOf="@+id/cv_character"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_endereco"
            app:layout_constraintStart_toEndOf="@+id/cv_character"
            android:layout_marginTop="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>